Update ARC env tooling and analysis notebook

--- a/notebooks/001_run_analysis.ipynb
+++ b/notebooks/001_run_analysis.ipynb
@@ -5,17 +5,18 @@
    "id": "dab6b28a",
    "metadata": {},
    "source": [
-    "### Europe Network Analysis\n",
+    "### Network Analysis\n",
     "\n",
-    "Notebook for quick sanity checks and plots of the PyPSA-Earth test run.\n",
+    "Notebook for quick sanity checks and plots of a solved PyPSA-Earth network.\n",
     "\n",
-    "### Sync the solved network (from repo root)\n",
+    "### Sync a solved network (from repo root)\n",
     "\n",
     "```bash\n",
     "rsync -avz --progress \\\n",
-    "  engs2523@arc-login.arc.ox.ac.uk:/data/engs-df-green-ammonia/engs2523/pypsa-earth/results/europe/networks/elec_s_140_ec_lcopt_Co2L-3h.nc \\\n",
-    "  results/europe/networks/\n",
-    "```"
+    "  engs2523@arc-login.arc.ox.ac.uk:/data/engs-df-green-ammonia/engs2523/pypsa-earth/results/<run-name>/networks/<network-file>.nc \\\n",
+    "  results/<run-name>/networks/\n",
+    "```\n",
+    "Then update `RESULT_PATH` in the next cell to point at the downloaded file."
    ]
   },
   {
@@ -58,10 +59,12 @@
    "source": [
     "from pathlib import Path\n",
     "\n",
-    "RESULT_PATH = Path('../results/europe/networks/elec_s_140_ec_lcopt_Co2L-3h.nc')\n",
+    "# Update this path to the solved network you synced into results/\n",
+    "RESULT_PATH = Path('../results/arc/europe-day-3h/networks/elec_s_108_ec_lcopt_Co2L-3h.nc')\n",
+    "\n",
     "if not RESULT_PATH.exists():\n",
     "    raise FileNotFoundError(\n",
-    "        \"Solved network missing. Run the rsync command at the top to copy elec_s_140_ec_lcopt_Co2L-3h.nc locally.\"\n",
+    "        f\"Solved network missing at {RESULT_PATH}. Update RESULT_PATH or sync the file first.\"\n",
     "    )\n",
     "print('Using network file:', RESULT_PATH.resolve())"
    ]
