fix: move focus_weights to cluster_options section (root-level was being ignored by PyPSA-Earth)

--- a/notebooks/001_run_analysis.ipynb
+++ b/notebooks/001_run_analysis.ipynb
@@ -2738,6 +2738,30 @@
     "print(\"   SE actual:   3 AC + 4 DC + ? H2 + ? battery = 7+ buses\")\n",
     "print(\"   → This suggests clustering is PARTIALLY failing, not completely broken\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fac8c797",
+   "metadata": {},
+   "source": [
+    "## ROOT CAUSE IDENTIFIED: focus_weights Location\n",
+    "\n",
+    "The **actual root cause** of the clustering failure was discovered:\n",
+    "\n",
+    "**Problem**: `focus_weights` was at the YAML root level (`focus_weights: {...}`)\n",
+    "\n",
+    "**Should be**: Inside `cluster_options:` section (`cluster_options: { focus_weights: {...} }`)\n",
+    "\n",
+    "PyPSA-Earth's clustering algorithm only reads focus_weights from `config.get(\"cluster_options\", {}).get(\"focus_weights\", None)`. The root-level focus_weights was being **silently ignored**.\n",
+    "\n",
+    "**Fix Applied**:\n",
+    "1. Moved focus_weights into `cluster_options: focus_weights:` in base config\n",
+    "2. Kept root-level focus_weights for backwards compatibility\n",
+    "3. Reverted the aggressive H2/battery link removal (those should be allowed in electricity scenarios)\n",
+    "4. Updated scenario to properly allow battery charger/discharger links\n",
+    "\n",
+    "**Expected Result**: Next job should produce proper clustering (Sweden: 1 node instead of 7)"
+   ]
   }
  ],
  "metadata": {
