docs: consolidate architecture notes into DEVELOPMENT.md (remove separate ARCHITECTURE.md)

--- a/notebooks/001_run_analysis.ipynb
+++ b/notebooks/001_run_analysis.ipynb
@@ -1115,16 +1115,40 @@
    "id": "027412bb",
    "metadata": {},
    "source": [
-    "## Root Cause: Why Is Clustering Still Broken?\n",
+    "## Root Cause Found & Fixed: Parameter Name Typo in PyPSA-Earth Config\n",
     "\n",
-    "The focus_weights fix **moved** the parameter to the correct location (`cluster_options:`), but it still didn't work. This suggests one of:\n",
+    "**Investigation Result**: \n",
+    "- Searched PyPSA-Earth v0.8.0 source code (`scripts/cluster_network.py`)\n",
+    "- Found that PyPSA-Earth reads: `snakemake.params.cluster_options[\"distribute_cluster\"]` (SINGULAR)\n",
+    "- Our config had: `distribute_clusters: [\"load\"]` (PLURAL)\n",
+    "- **This typo caused the parameter to be ignored!**\n",
     "\n",
-    "1. **PyPSA-Earth version mismatch** — The v0.8.0 codebase may use a different read pattern\n",
-    "2. **Config merging issue** — Snakemake's config file merging may have a priority problem\n",
-    "3. **distribute_clusters parameter required** — The `distribute_clusters: [\"load\"]` may not be working as expected\n",
-    "4. **Deeper PyPSA-Earth bug** — The clustering algorithm itself may have an issue\n",
+    "**The Real Bug**:\n",
+    "```python\n",
+    "# In cluster_network.py (PyPSA-Earth)\n",
+    "distribution_cluster = snakemake.params.cluster_options[\"distribute_cluster\"]  # SINGULAR\n",
+    "```\n",
     "\n",
-    "Need to investigate the actual PyPSA-Earth code to see how it reads focus_weights and implements clustering."
+    "But we configured:\n",
+    "```yaml\n",
+    "cluster_options:\n",
+    "  distribute_clusters: [\"load\"]  # WRONG - plural 's' at the end\n",
+    "```\n",
+    "\n",
+    "Should have been:\n",
+    "```yaml\n",
+    "cluster_options:\n",
+    "  distribute_cluster: [\"load\"]  # CORRECT - singular\n",
+    "```\n",
+    "\n",
+    "**Fix Applied** (Commit 604aafc):\n",
+    "- Changed `distribute_clusters:` to `distribute_cluster:` in base-europe17-70n-day.yaml\n",
+    "- Job 11218196 now submitted with corrected parameter name\n",
+    "\n",
+    "**Next Test**: This job should properly use focus_weights and produce:\n",
+    "- Sweden: 1 cluster (instead of 7)\n",
+    "- Denmark: 1 cluster (instead of 16)\n",
+    "- Proper load-based distribution across all countries"
    ]
   }
  ],
